edit screenshot and live link

--- a/README.me
+++ b/README.me
@@ -24,7 +24,7 @@ A simple and fun number guessing game built with HTML, CSS, and vanilla JavaScri
 
 ## 🚀 Try It Online
 
-🔗 [Play the game here](https://your-live-link.com)
+🔗 [Play the game here](https://hugolomba.github.io/guess-my-number/)
 
 ## 📁 Source Code
 
